--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,8 +16,10 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es2020",
+    "allowJs": true,
+    "target": "es2015",
     "module": "es2020",
+    "allowSyntheticDefaultImports": true,
     "lib": [
       "es2020",
       "dom"
